--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <section>
         <p>
-            When considering an impulsive purchase, it's wise to ask yourself a series of reflective questions to determine if the purchase is prudent.</p>
+            When considering an impulsive purchase, it's wise to ask yourself a series of 
+            reflective questions to determine if the purchase is prudent.</p>
     </section>
     
     <footer>Inspired fork from <a href="https://dont.build">dont.build</a> &mdash; 2023 / <a href="https://github.com/realvinay/dontspend.money">GitHub</a></footer>
@@ -75,12 +76,12 @@
 <script>
 (function() {
     const params = [
-        { weight: 0.10, value: 5.5, negative: false, name: 'p-need', },
+        { weight: 0.20, value: 5.5, negative: false, name: 'p-need', },
         { weight: 0.20, value: 5.5, negative: true, name: 'p-finances',},
         { weight: 0.20, value: 5.5, negative: false, name: 'p-price-comparison',},
-        { weight: 0.15, value: 5.5, negative: false,  name: 'p-usage-frequency', },
-        { weight: 0.20, value: 5.5, negative: false,  name: 'p-purchase-relevance',},
-        { weight: 0.15, value: 5.5, negative: false,  name: 'p-longterm-goals',},
+        { weight: 0.20, value: 5.5, negative: false,  name: 'p-usage-frequency', },
+        { weight: 0.10, value: 5.5, negative: false,  name: 'p-purchase-relevance',},
+        { weight: 0.10, value: 5.5, negative: false,  name: 'p-longterm-goals',},
     ]
 
     params.forEach((p, n) => {
