--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </fieldset>
             <fieldset class="p-price-comparison">
                 <span class="value"></span>
-                <label>Have I compared crices and options?</label>
+                <label>Have I compared prices and options?</label>
                 <input type="range" min="1" max="10" step="0.5" value="5.5" />
             </fieldset>
             <fieldset class="p-usage-frequency">
